Minor changes/cleanup
Signed-off-by: Amandeep Singh Arora <aman@dianomic.com>

--- a/tests/unit/C/CMakeLists.txt
+++ b/tests/unit/C/CMakeLists.txt
@@ -64,7 +64,7 @@ file(GLOB COMMON_LIB_SOURCES ../../../C/common/*.cpp)
 add_library(common-lib SHARED ${COMMON_LIB_SOURCES})
 target_link_libraries(common-lib ${UUIDLIB})
 target_link_libraries(common-lib ${Boost_LIBRARIES})
-target_link_libraries(common-lib -lcrypto -lgcov)
+target_link_libraries(common-lib -lcrypto)
 set_target_properties(common-lib PROPERTIES SOVERSION 1)
 
 
@@ -73,7 +73,7 @@ file(GLOB SERVICES_COMMON_LIB_SOURCES ../../../C/services/common/*.cpp)
 
 # Create shared library
 add_library(services-common-lib SHARED ${SERVICES_COMMON_LIB_SOURCES})
-target_link_libraries(services-common-lib ${COMMONLIB} -lgcov)
+target_link_libraries(services-common-lib ${COMMONLIB})
 set_target_properties(services-common-lib PROPERTIES SOVERSION 1)
 
 
@@ -84,7 +84,7 @@ file(GLOB PLUGINS_COMMON_LIB_SOURCES ../../../C/plugins/common/*.cpp)
 set(LIBCURL_LIB -lcurl)
 
 add_library(plugins-common-lib SHARED ${PLUGINS_COMMON_LIB_SOURCES})
-target_link_libraries(plugins-common-lib ${Boost_LIBRARIES} common-lib services-common-lib z ssl crypto -lgcov)
+target_link_libraries(plugins-common-lib ${Boost_LIBRARIES} common-lib services-common-lib z ssl crypto)
 target_link_libraries(plugins-common-lib ${LIBCURL_LIB})
 
 set_target_properties(plugins-common-lib PROPERTIES SOVERSION 1)
@@ -102,7 +102,7 @@ target_link_libraries(${LIB_NAME}
                         common-lib
                         plugins-common-lib
                         ssl
-                        crypto -lgcov)
+                        crypto)
 
 set_target_properties(${LIB_NAME}  PROPERTIES SOVERSION 1)
 
@@ -117,7 +117,7 @@ file(GLOB STORAGE_COMMON_LIB_SOURCE ../../../C/plugins/storage/common/*.cpp)
 
 # Create shared library
 add_library(${LIB_NAME} SHARED ${STORAGE_COMMON_LIB_SOURCE})
-target_link_libraries(${LIB_NAME} ${DLLIB} -lgcov)
+target_link_libraries(${LIB_NAME} ${DLLIB})
 set_target_properties(${LIB_NAME} PROPERTIES SOVERSION 1)
 
 add_subdirectory(cmake_pg)
