Added support for coverage report in XML format in addition to HTML format
Signed-off-by: Amandeep Singh Arora <aman@dianomic.com>

--- a/tests/unit/C/plugins/storage/postgres/CMakeLists.txt
+++ b/tests/unit/C/plugins/storage/postgres/CMakeLists.txt
@@ -100,3 +100,9 @@ setup_target_for_coverage_gcovr_html(
             DEPENDENCIES ${PROJECT_NAME}
     )
 
+setup_target_for_coverage_gcovr_xml(
+            NAME CoverageXml
+            EXECUTABLE ${PROJECT_NAME}
+            DEPENDENCIES ${PROJECT_NAME}
+    )
+
