added APIs in storage class to send management client ptr to plugin
Signed-off-by: Innovative-ashwin <sinha.ashwini111@gmail.com>

--- a/C/plugins/storage/sqlite/CMakeLists.txt
+++ b/C/plugins/storage/sqlite/CMakeLists.txt
@@ -20,6 +20,7 @@ include_directories(../../../common/include)
 include_directories(../../../services/common/include)
 include_directories(../common/include)
 include_directories(../../../thirdparty/rapidjson/include)
+include_directories(../../../thirdparty/Simple-Web-Server)
 link_directories(${PROJECT_BINARY_DIR}/../../../lib)
 
 # Create shared library
