DOCBRANCH accepts in make target
Signed-off-by: ashish-jabble <ashish@dianomic.com>

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -23,11 +23,11 @@ generated: fledge_plugins.rst plugin_and_services_configuration
 
 fledge_plugins.rst: 
 	@echo Building page with table of plugins
-	@bash scripts/fledge_plugin_list fledge_plugins.rst
+	@bash scripts/fledge_plugin_list fledge_plugins.rst $(DOCBRANCH)
 
 plugin_and_services_configuration:
 	@echo Building plugin and service configuration appendices
-	@bash scripts/plugin_and_service_documentation
+	@bash scripts/plugin_and_service_documentation $(DOCBRANCH)
 
 clean:
 	@echo Clean Doc build artifacts
