--- a/tests/unit/C/services/storage/postgres/CMakeLists.txt
+++ b/tests/unit/C/services/storage/postgres/CMakeLists.txt
@@ -26,6 +26,9 @@ file(GLOB utils_sources "../../../../../../C/common/json_utils.cpp")
  
 # Link runTests with what we want to test and the GTest and pthread library
 add_executable(RunTests ${test_sources} ${logger_sources} ${config_sources} ${utils_sources} tests.cpp)
+#setting BOOST_COMPONENTS to use pthread library only
+set(BOOST_COMPONENTS thread)
+find_package(Boost 1.53.0 COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
 target_link_libraries(RunTests ${GTEST_LIBRARIES} pthread)
 
 setup_target_for_coverage_gcovr_html(
