--- a/tests/system/lab/test.config
+++ b/tests/system/lab/test.config
@@ -2,6 +2,8 @@ FLEDGE_IP=localhost
 PI_IP=192.168.4.41
 PI_USER=Administrator
 PI_PASSWORD='xxx'
+PI_PORT="443"
+PI_DB="foglamp"
 MAX_RETRIES=100
 SLEEP_FIX=10 # Time to sleep to fix bugs. This should be zero.
 EXIT_EARLY=0
