--- a/tests/system/lab/test.config
+++ b/tests/system/lab/test.config
@@ -10,4 +10,4 @@ EXIT_EARLY=0
 ADD_NORTH_AS_SERVICE=true
 VERIFY_EGRESS_TO_PI=1
 STORAGE=sqlite # postgres, sqlite-in-memory, sqlitelb
-READING_PLUGIN_DB="Use main plugin"
+READING_PLUGIN_DB='Use main plugin'
