--- a/python/requirements-test.txt
+++ b/python/requirements-test.txt
@@ -15,3 +15,7 @@ pyserial==3.4
 # keep this in sync with requirement.txt, as otherwise pytest-aiohttp always pulls the latest
 aiohttp==3.8.1
 yarl==1.7.2
+
+# For Azure IoT Hub
+azure-storage-blob==12.13.1
+pandas==1.1.5
