--- a/C/plugins/storage/sqlitelb/CMakeLists.txt
+++ b/C/plugins/storage/sqlitelb/CMakeLists.txt
@@ -16,6 +16,7 @@ file(GLOB SOURCES ./common/*.cpp ../sqlite/schema/*.cpp *.cpp)
 include_directories(./include)
 include_directories(./common/include)
 include_directories(../sqlite/schema/include)
+include_directories(../sqlite/common/include)
 include_directories(../../../common/include)
 include_directories(../../../services/common/include)
 include_directories(../common/include)
