Fix unit test cmakefiles to access new sqlite_common include file
Signed-off-by: Mark Riddoch <mark@dianomic.com>

--- a/tests/unit/C/cmake_sqlitelb/CMakeLists.txt
+++ b/tests/unit/C/cmake_sqlitelb/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories(../../../../C/plugins/storage/common/include)
 include_directories(../../../../C/plugins/storage/sqlite/schema/include)
 include_directories(../../../../C/plugins/storage/sqlitelb/include)
 include_directories(../../../../C/plugins/storage/sqlitelb/common/include)
+include_directories(../../../../C/plugins/storage/sqlite/common/include)
 
 # Check Sqlite3 required version
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")
